css/styles.css
/* reset */
* {
  box-sizing: border-box;
}

ul,
ol {
  margin: 0;
  padding: 0;
  list-style: none;
}
a {
  text-decoration: none;
  color: inherit;
}
img {
  display: block;
  max-width: 100%;
  height: auto;
}

/* Colors */
:root {
  --iris: #4d5ae5;
  --ocean: #404bbf;
  --navy-blue: #2e2f42;
  --green: #31d0aa;
  --slate: #434455;
  --light-slate: #8e8f99;
  --cornflower: #e7e9fc;
  --cloud: #f4f4fd;
  --navy-blue-modal: #2e2f42;
  --grey: #2e2f42;
  --white: #ffffff;
  --dairy: #fcfcfc;
}

/* Typography */
body {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  margin: 0;
  color: var(--slate);
}

h1 {
  text-align: center;
  color: var(--white);
  font-weight: 700;
  font-size: 56px;
  letter-spacing: 0.02em;
  line-height: 1.07;
}

h2 {
  text-align: center;
  font-weight: 700;
  font-size: 36px;
  letter-spacing: 0.02em;
  line-height: 1.11;
}

.container {
  max-width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

/* Header */
.top-line {
  padding: 24px 0;
  border-bottom: 1px solid var(--cornflower);
}

.top-line-row {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 24px;
}

/* logo */
.logo {
  font-family: "Raleway", sans-serif;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.66;
  letter-spacing: 0.03em;
  color: var(--navy-blue);
}
.logo-web {
  color: var(--iris);
}

/* Nav */
.nav {
  display: flex;
  gap: 40px;
}
.nav-link {
  display: inline-block;
  padding: 24px 0;
  font-weight: 500;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  transition: color 250ms ease-in-out; /* Yumuşak geçiş */
}

.nav-link:hover,
.nav-link:focus-visible {
  color: var(--ocean);
}

/* Address */
.address {
  font-style: normal;
}
.address-list {
  display: flex;
  gap: 40px;
}
.address-link {
  display: inline-block;
  padding: 24px 0;
  letter-spacing: 0.02em;
  color: var(--slate);
  transition: color 250ms ease-in-out; /* Yumuşak geçiş */
}
.address-link:hover,
.address-link:focus-visible {
  color: var(--ocean);
}

/* Main */
.main {
  background-color: var(--navy-blue);
  color: var(--white);
  padding: 188px 0;
  text-align: center;
}

/* button */
.main-button {
  cursor: pointer;
  border: none;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: var(--white);
  background-color: var(--iris);
  border-radius: 4px;
  padding: 16px 32px;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  transition: background-color 250ms ease-in-out; /* buton renginin yavaş ve akıcı geçişi için ek olarak öğrendiğim bilgiyi kullandım */
}

.main-button:hover,
.main-button:focus-visible {
  background-color: var(--ocean);
}

/* Feature */
.feature {
  background-color: var(--white);
  padding: 120px 0;
}

.feature-list {
  display: flex;
  gap: 24px;
}

.feature-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  margin: 0 0 8px 0;
}

/* Team */
.team {
  background-color: var(--cloud);
  padding: 120px 0;
}

.team-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  text-align: center;
  margin: 0 0 72px;
}
.team-list {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 32px;
  margin: 0;
  padding: 0;
}

.team-item {
  background-color: white;
  border: 1px solid var(--cornflower);
  border-radius: 4px;
  overflow: hidden;
  width: 264px;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}
.team-item img {
  width: 100%;
  height: 260px;
  object-fit: cover;
}
.team-info {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 32px 16px;
  text-align: center;
}

.team-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  margin: 0 0 8px;
}

.team-role {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--slate);
  margin: 0;
}

/* Our Portfolio */

.portfolio {
  background-color: var(--white);
  padding: 120px 0;
}

.port-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  text-align: center;
  margin: 0 0 72px;
}
.port-list {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
  margin: 0;
  padding: 0;
}

.port-item {
  background-color: var(--white);
  transition: box-shadow 250ms ease-in-out;
}

.port-item:hover,
.port-item:focus-within {
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
}

.port-item img {
  display: block;
  width: 360px;
  height: 300px;
  object-fit: cover;
}

.port-info {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 8px;
  padding: 32px 16px;
  border: 1px solid var(--cornflower);
  border-top: none;
  width: 360px;
  height: 120px;
}

.port-name {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: var(--navy-blue);
  margin: 0 0 8px;
}

.port-type {
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--slate);
  margin: 0;
}

/* Footer */
.footer {
  background-color: var(--navy-blue);
  padding: 100px 0;
  text-align: left;
}

.logo-footer {
  display: inline-flex;
  align-items: center;
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: var(--cloud);
  margin-bottom: 16px;
}

.footer-text {
  max-width: 264px;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: var(--cloud);
  margin: 0;
}

